--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="css/main.css"><title>Document</title></head><body><div class="content-container"> <header class="header"><div class="container"><div class="logo"> <img src="img/logo.svg" alt="logo"></div><menu class="menu"> <div class="hamburger-menu"><div class="hamburger"><span></span></div></div><div class="header__items">               <a class="phone" href="tel:+380670000000">+380670000000</a><div class="language"> <div class="language__ico"> <img src="img/ukraine.svg" alt="ukraine"></div></div></div><ul class="menu__nav"><li class="menu__item"><a href="#">Про нас</a></li><li class="menu__item"><a href="#">Ментори</a></li><li class="menu__item"><a href="#">Відгуки</a></li><li class="menu__item"><a href="#">Подарувати сертифікат</a></li><li class="menu__item"><a href="#">Контакти</a></li><li class="menu__item"><a href="#">Кабінет</a></li></ul></menu></div></header><div class="slider">      <div class="slide"><h1 class="title">N-CODE <span class="title_small">Місце зустрічі з твоїм ментором</span></h1><img src="./img/main-slide.png" alt=""></div><a class="btn" href="#">Отримати консультацію менеджера</a></div><section class="advantages"><h2 class="section-title">НАШІ ПЕРЕВАГИ</h2><div class="container"><div class="advantages__item"><span class="item__num">01</span><p>Наші викладачі мають досвід в IT від 5 років</p></div><div class="advantages__item"><span class="item__num">02</span><p>Кожен студент має персонального менеджера</p></div><div class="advantages__item"><span class="item__num">03</span><p>Зручна форма оплати</p></div><div class="advantages__item"><span class="item__num">04</span><p>Підключення до чат-боту з англійської для розробників</p></div><div class="advantages__item"><span class="item__num">05</span><p>Гнучкий графік занять</p></div><div class="advantages__item"><span class="item__num">06</span><p>Допомагаємо скласти резюме та підготуватись до співбесіди</p></div><div class="advantages__item"><span class="item__num">07</span><p>Найкращих студентів працевлаштовуємо</p></div><div class="advantages__item"><span class="item__num">08</span><p>Сертифікатрекомендації в залежності від отриманих компетенцій</p></div></div></section></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="content-container">
+        <header class="header">
+            <div class="container">
+                <div class="logo"> <img src="img/logo.svg" alt="logo"></div>
+                <menu class="menu">
+                    <div class="hamburger-menu">
+                        <div class="hamburger"><span></span></div>
+                    </div>
+                    <div class="header__items"> <a class="phone" href="tel:+380670000000">+380670000000</a>
+                        <div class="language">
+                            <div class="language__ico"> <img src="img/ukraine.svg" alt="ukraine"></div>
+                        </div>
+                    </div>
+                    <ul class="menu__nav">
+                        <li class="menu__item"><a href="#">Про нас</a></li>
+                        <li class="menu__item"><a href="#">Ментори</a></li>
+                        <li class="menu__item"><a href="#">Відгуки</a></li>
+                        <li class="menu__item"><a href="#">Подарувати сертифікат</a></li>
+                        <li class="menu__item"><a href="#">Контакти</a></li>
+                        <li class="menu__item"><a href="#">Кабінет</a></li>
+                    </ul>
+                </menu>
+            </div>
+        </header>
+        <div class="slider">
+            <div class="slide">
+                <h1 class="title">N-CODE <span class="title_small">Місце зустрічі з твоїм ментором</span></h1><img
+                    src="./img/main-slide.png" alt="">
+            </div><a class="btn" href="#">Отримати консультацію менеджера</a>
+        </div>
+        <section class="advantages">
+            <h2 class="section-title">НАШІ ПЕРЕВАГИ</h2>
+            <div class="container">
+                <div class="advantages__item"><span class="item__num">01</span>
+                    <p>Наші викладачі мають досвід в IT від 5 років</p>
+                </div>
+                <div class="advantages__item"><span class="item__num">02</span>
+                    <p>Кожен студент має персонального менеджера</p>
+                </div>
+                <div class="advantages__item"><span class="item__num">03</span>
+                    <p>Зручна форма оплати</p>
+                </div>
+                <div class="advantages__item"><span class="item__num">04</span>
+                    <p>Підключення до чат-боту з англійської для розробників</p>
+                </div>
+                <div class="advantages__item"><span class="item__num">05</span>
+                    <p>Гнучкий графік занять</p>
+                </div>
+                <div class="advantages__item"><span class="item__num">06</span>
+                    <p>Допомагаємо скласти резюме та підготуватись до співбесіди</p>
+                </div>
+                <div class="advantages__item"><span class="item__num">07</span>
+                    <p>Найкращих студентів працевлаштовуємо</p>
+                </div>
+                <div class="advantages__item"><span class="item__num">08</span>
+                    <p>Сертифікатрекомендації в залежності від отриманих компетенцій</p>
+                </div>
+            </div>
+        </section>
+    </div>
+</body>
+
+</html>
