--- a/index.html
+++ b/index.html
@@ -29,9 +29,19 @@
                         <li class="menu__item"><a href="#">Відгуки</a></li>
                         <li class="menu__item"><a href="#">Подарувати сертифікат</a></li>
                         <li class="menu__item"><a href="#">Контакти</a></li>
-                        <li class="menu__item"><a href="#">Кабінет</a></li>
+                        <li class="menu__item"><a href="null">Кабінет</a></li>
                     </ul>
                 </menu>
+            </div>
+            <div class="mob-menu"><span class="menu-close"></span>
+                <ul class="menu__nav">
+                    <li class="menu__item"><a href="javascript:void(0);">Про нас</a></li>
+                    <li class="menu__item"><a href="#">Ментори</a></li>
+                    <li class="menu__item"><a href="#">Відгуки</a></li>
+                    <li class="menu__item"><a href="#">Подарувати сертифікат</a></li>
+                    <li class="menu__item"><a href="#">Контакти</a></li>
+                    <li class="menu__item"><a href="null">Кабінет</a></li>
+                </ul>
             </div>
         </header>
         <div class="slider">
@@ -70,6 +80,7 @@
             </div>
         </section>
     </div>
+    <script src="js/script.js"> </script>
 </body>
 
 </html>
