--- a/index.html
+++ b/index.html
@@ -30,18 +30,12 @@
             </div>
           </div>
           <ul class="menu__nav">
-            <li class="menu__item"><a href="#">Про нас</a>
-            </li>
-            <li class="menu__item"><a href="#">Ментори</a>
-            </li>
-            <li class="menu__item"><a href="#">Вiдгуки</a>
-            </li>
-            <li class="menu__item"><a href="#">Подарувати сертифiкат</a>
-            </li>
-            <li class="menu__item"><a href="#">Контакти</a>
-            </li>
-            <li class="menu__item"><a href="null">Кабiнет</a>
-            </li>
+            <li class="menu__item"><a href="#">Про нас</a></li>
+            <li class="menu__item"><a href="#">Ментори</a></li>
+            <li class="menu__item"><a href="#">Вiдгуки</a></li>
+            <li class="menu__item"><a href="#">Подарувати сертифiкат</a></li>
+            <li class="menu__item"><a href="#">Контакти</a></li>
+            <li class="menu__item"><a href="null">Кабiнет</a></li>
           </ul>
         </menu>
       </div>
@@ -54,12 +48,18 @@
           </div>
         </div>
         <ul class="menu__nav">
-          <li class="menu__item"><a href="#">Про нас</a></li>
-          <li class="menu__item"><a href="#">Ментори</a></li>
-          <li class="menu__item"><a href="#">Вiдгуки</a></li>
-          <li class="menu__item"><a href="#">Подарувати сертифiкат</a></li>
-          <li class="menu__item"><a href="#">Контакти</a></li>
-          <li class="menu__item"><a href="null">Кабiнет</a></li>
+          <li class="menu__item"><a href="#">Про нас</a>
+          </li>
+          <li class="menu__item"><a href="#">Ментори</a>
+          </li>
+          <li class="menu__item"><a href="#">Вiдгуки</a>
+          </li>
+          <li class="menu__item"><a href="#">Подарувати сертифiкат</a>
+          </li>
+          <li class="menu__item"><a href="#">Контакти</a>
+          </li>
+          <li class="menu__item"><a href="null">Кабiнет</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -70,7 +70,7 @@
       </div><a class="btn" href="#">Отримати консультацію менеджера</a>
     </div>
     <section class="advantages">
-      <h2 class="section-title">НАШІ ПЕРЕВАГИ</h2>
+      <h2 class="section-title">НАШi ПЕРЕВАГИ</h2>
       <div class="container">
         <div class="advantages__item"><span class="item__num">01</span>
           <p>Наші викладачі мають досвід в IT від 5 років</p>
@@ -98,8 +98,174 @@
         </div>
       </div>
     </section>
+    <section class="tutors">
+      <h2 class="section-title">ТОП МЕНТОРiВ/РЕПЕТИТОРIВ</h2>
+      <div class="tutors-card__wrap">
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна
+                інформація про викладача та про досвід роботи в ІТ</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна
+                інформація про викладача та про досвід роботи в ІТ</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна
+                інформація про викладача та про досвід роботи в ІТ</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна
+                інформація про викладача та про досвід роботи в ІТ</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна
+                інформація про викладача та про досвід роботи в ІТ</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна
+                інформація про викладача та про досвід роботи в ІТ</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна
+                інформація про викладача та про досвід роботи в ІТ</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card became-tutor">
+          <div class="tutors-card__img">
+            <img src="./img/add-ico-orange.svg" alt="">
+          </div>
+          <p>Стати ментором</p>
+        </div>
+      </div><a class="btn" href="#">Записатись на пробне заняття</a>
+    </section>
   </div>
-  <script src="js/script.js"> </script>
+  <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
