--- a/index.html
+++ b/index.html
@@ -30,12 +30,18 @@
             </div>
           </div>
           <ul class="menu__nav">
-            <li class="menu__item"><a href="#">Про нас</a></li>
-            <li class="menu__item"><a href="#">Ментори</a></li>
-            <li class="menu__item"><a href="#">Вiдгуки</a></li>
-            <li class="menu__item"><a href="#">Подарувати сертифiкат</a></li>
-            <li class="menu__item"><a href="#">Контакти</a></li>
-            <li class="menu__item"><a href="null">Кабiнет</a></li>
+            <li class="menu__item"><a href="#">Про нас</a>
+            </li>
+            <li class="menu__item"><a href="#">Ментори</a>
+            </li>
+            <li class="menu__item"><a href="#">Вiдгуки</a>
+            </li>
+            <li class="menu__item"><a href="#">Подарувати сертифiкат</a>
+            </li>
+            <li class="menu__item"><a href="#">Контакти</a>
+            </li>
+            <li class="menu__item"><a href="null">Кабiнет</a>
+            </li>
           </ul>
         </menu>
       </div>
@@ -99,7 +105,9 @@
       </div>
     </section>
     <section class="tutors">
-      <h2 class="section-title">ТОП МЕНТОРiВ/РЕПЕТИТОРIВ</h2>
+      <div class="section-title-wrap">
+        <h2 class="section-title">ТОП МЕНТОРiВ/РЕПЕТИТОРIВ</h2><a class="more-info-link">Всі ментори</a>
+      </div>
       <div class="tutors-card__wrap">
         <div class="tutors-card">
           <div class="tutors-card__top">
@@ -118,7 +126,7 @@
                 інформація про викладача та про досвід роботи в ІТ</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
               </div>
             </div>
           </div>
@@ -140,7 +148,7 @@
                 інформація про викладача та про досвід роботи в ІТ</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
               </div>
             </div>
           </div>
@@ -162,7 +170,7 @@
                 інформація про викладача та про досвід роботи в ІТ</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
               </div>
             </div>
           </div>
@@ -184,7 +192,7 @@
                 інформація про викладача та про досвід роботи в ІТ</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
               </div>
             </div>
           </div>
@@ -206,7 +214,7 @@
                 інформація про викладача та про досвід роботи в ІТ</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
               </div>
             </div>
           </div>
@@ -228,7 +236,7 @@
                 інформація про викладача та про досвід роботи в ІТ</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
               </div>
             </div>
           </div>
@@ -250,7 +258,7 @@
                 інформація про викладача та про досвід роботи в ІТ</p>
               <div class="tutors-card__course">
                 <p>Курс:</p>
-                <p>Назва курсу</p><a class="tutors-card__course-link" href="">Опис повністю</a>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
               </div>
             </div>
           </div>
