section roadmap without script

--- a/index.html
+++ b/index.html
@@ -271,6 +271,62 @@
         </div>
       </div><a class="btn" href="#">Записатись на пробне заняття</a>
     </section>
+    <section class="roadmap">
+      <h2 class="section-title">ЯК СТАТИ КРУТИМ РОЗРОБНИКОМ?</h2>
+      <div class="roadmap__wrap">
+        <div class="roadmap-step">
+          <div class="roadmap-step__item">
+            <div class="roadmap-step__item-img">
+              <img src="./img/step_1-ico.svg" alt="">
+            </div>
+            <p>Крок 1</p>
+            <p>Заповнити заявку</p>
+          </div>
+          <div class="roadmap-step__item">
+            <div class="roadmap-step__item-img">
+              <img src="./img/step_2-ico.svg" alt="">
+            </div>
+            <p>Крок 2</p>
+            <p>Зв’язок з менеджером</p>
+          </div>
+          <div class="roadmap-step__item">
+            <div class="roadmap-step__item-img">
+              <img src="./img/step_3-ico.svg" alt="">
+            </div>
+            <p>Крок 3</p>
+            <p>Тестування</p>
+          </div>
+          <div class="roadmap-step__item">
+            <div class="roadmap-step__item-img">
+              <img src="./img/step_4-ico.svg" alt="">
+            </div>
+            <p>Крок 4</p>
+            <p>Реєстрація в онлайн кабінеті</p>
+          </div>
+        </div>
+        <div class="roadmap-step-info">
+          <div class="roadmap-step-info__item active">
+            <p></p>
+            <p>Залишити заявку у формі зворотнього зв’язку чи подзвонити 067 000 00 00</p>
+          </div>
+          <div class="roadmap-step-info__item">
+            <p>Отримати консультацію у менеджера та записатись на безкоштовне пробне заняття.</p>
+            <p>На даному етапі менеджер допомагає підібрати ментора в залежності від рівня знань студента та
+              кваліфікації ментора. Менеджер платформи N-Code узгоджує зі студентом та ментором вільну дату та час для
+              проведення пробного 30-ти хвилинного онлайн-заняття.</p>
+          </div>
+          <div class="roadmap-step-info__item">
+            <p>Пройти 30-ти хвилинне онлайн-тестування напряму з репетитором</p>
+            <p>На даному етапі ментор (репетитор) проводить тестування рівня знань студента, надає рекомендації  та
+              консультує щодо подальших уроків.</p>
+          </div>
+          <div class="roadmap-step-info__item">
+            <p>Приєднатись до онлайн-кабінету платформи N-Code</p>
+            <p>Студент може самостійно обирати дату та час заняття з ментором у власному онлайн-кабінеті.</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
   <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
