--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             <p>Студент може самостійно обирати дату та час заняття з ментором у власному онлайн-кабінеті.</p>
           </div>
         </div>
-      </div>
+      </div><a class="btn" href="#">Записатись на пробне заняття</a>
     </section>
   </div>
   <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
