--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       <h2 class="section-title">ЯК СТАТИ КРУТИМ РОЗРОБНИКОМ?</h2>
       <div class="roadmap__wrap">
         <div class="roadmap-step">
-          <div class="roadmap-step__item">
+          <div class="roadmap-step__item active">
             <div class="roadmap-step__item-img">
               <img src="./img/step_1-ico.svg" alt="">
             </div>
@@ -325,6 +325,55 @@
             <p>Студент може самостійно обирати дату та час заняття з ментором у власному онлайн-кабінеті.</p>
           </div>
         </div>
+      </div><a class="btn" href="#">Записатись на пробне заняття</a>
+    </section>
+    <section class="salary">
+      <h2 class="section-title">Кар’eрне зростання у front-END</h2>
+      <div class="salary-card-wrap">
+        <p class="salary-card__text">Кар'єрний ріст та збільшення заробітної плати - це два головних фактори, що
+          приваблюють нових фахівців до сфери ІТ. І не даремно, адже ця галузь надає безліч можливостей для саморозвитку
+          та професійного зростання.</p>
+        <div class="salary-card">
+          <p class="salary-card__sum">550 $</p>
+          <div class="salary-card__img">
+            <img src="./img/salary-card-img_1.svg" alt="">
+          </div>
+          <div class="item-group">
+            <p class="salary-card__rank">Trainee</p>
+            <p class="salary-card__rank-time">Від 3 місяців</p>
+          </div>
+        </div>
+        <div class="salary-card">
+          <p class="salary-card__sum">1000$ +</p>
+          <div class="salary-card__img">
+            <img src="./img/salary-card-img_2.svg" alt="">
+          </div>
+          <div class="item-group">
+            <p class="salary-card__rank">Junior</p>
+            <p class="salary-card__rank-time">Досвід 1-2 роки</p>
+          </div>
+        </div>
+        <div class="salary-card">
+          <p class="salary-card__sum">2500$ +</p>
+          <div class="salary-card__img">
+            <img src="./img/salary-card-img_3.svg" alt="">
+          </div>
+          <div class="item-group">
+            <p class="salary-card__rank">Middle</p>
+            <p class="salary-card__rank-time">Досвід від 3-5 років</p>
+          </div>
+        </div>
+        <div class="salary-card">
+          <p class="salary-card__sum">4000$ +</p>
+          <div class="salary-card__img">
+            <img src="./img/salary-card-img_4.svg" alt="">
+          </div>
+          <div class="item-group">
+            <p class="salary-card__rank">Senior</p>
+            <p class="salary-card__rank-time">Досвід від 6 років</p>
+          </div>
+        </div>
+        <div class="salary__line"></div>
       </div><a class="btn" href="#">Записатись на пробне заняття</a>
     </section>
   </div>
