add title; some fix

--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
         <p class="salary-card__text">Кар'єрний ріст та збільшення заробітної плати - це два головних фактори, що
           приваблюють нових фахівців до сфери ІТ. І не даремно, адже ця галузь надає безліч можливостей для саморозвитку
           та професійного зростання.</p>
+        <h3 class="salary__title">Зарплати JavaScript розробника</h3>
         <div class="salary-card">
           <p class="salary-card__sum">550 $</p>
           <div class="salary-card__img">
