--- a/index.html
+++ b/index.html
@@ -377,6 +377,204 @@
         <div class="salary__line"></div>
       </div><a class="btn" href="#">Записатись на пробне заняття</a>
     </section>
+    <section class="feedback">
+      <div class="section-title-wrap">
+        <h2 class="section-title">ВІДГУКИ</h2><a class="more-info-link">Всі відгуки</a>
+      </div>
+      <div class="tutors-card__wrap">
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
+                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
+              </div>
+              <div class="tutors-card__tutor">
+                <p>Викладач:</p>
+                <p>Ім’я Прізвище</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
+                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
+              </div>
+              <div class="tutors-card__tutor">
+                <p>Викладач:</p>
+                <p>Ім’я Прізвище</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
+                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
+              </div>
+              <div class="tutors-card__tutor">
+                <p>Викладач:</p>
+                <p>Ім’я Прізвище</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
+                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
+              </div>
+              <div class="tutors-card__tutor">
+                <p>Викладач:</p>
+                <p>Ім’я Прізвище</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
+                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
+              </div>
+              <div class="tutors-card__tutor">
+                <p>Викладач:</p>
+                <p>Ім’я Прізвище</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
+                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
+              </div>
+              <div class="tutors-card__tutor">
+                <p>Викладач:</p>
+                <p>Ім’я Прізвище</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card">
+          <div class="tutors-card__top">
+            <div class="tutors-card__img">
+              <img src="img//tutors-img.svg" alt="tutor">
+            </div>
+            <p class="tutors-card__name">Им’я Прізвище</p>
+            <div class="tutors-card__rate"> <i class="mentors__star fa-solid fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i><i
+                class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i>
+            </div>
+          </div>
+          <div class="container">
+            <div class="tutors-card__info">
+              <p class="tutors-card__description">Текст відгуку студента, тут він вас хвалить. Текст відгуку студента,
+                тут він вас хвалить.Текст відгуку студента, тут він вас хвалить....</p>
+              <div class="tutors-card__course">
+                <p>Курс:</p>
+                <p>Назва курсу</p><a class="tutors-card__course-link more-info-link" href="">Відгук повністю</a>
+              </div>
+              <div class="tutors-card__tutor">
+                <p>Викладач:</p>
+                <p>Ім’я Прізвище</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tutors-card became-tutor">
+          <div class="tutors-card__img">
+            <img src="./img/add-ico-orange.svg" alt="">
+          </div>
+          <p>Залишити відгук</p>
+        </div>
+      </div><a class="mob_btn btn" href="#">Дивитись всі відгуки</a>
+      <div class="btn-wrap"><a class="btn_light btn" href="#">Замовити сертифікат</a><a class="btn" href="#">Отримати
+          консультацію менеджера</a>
+      </div>
+    </section>
   </div>
   <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
