--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
     </section>
     <section class="feedback">
       <div class="section-title-wrap">
-        <h2 class="section-title">ВІДГУКИ</h2><a class="more-info-link">Всі відгуки</a>
+        <h2 class="section-title">ВiДГУКИ</h2><a class="more-info-link">Всі відгуки</a>
       </div>
       <div class="tutors-card__wrap">
         <div class="tutors-card">
@@ -573,6 +573,41 @@
       </div><a class="mob_btn btn" href="#">Дивитись всі відгуки</a>
       <div class="btn-wrap"><a class="btn_light btn" href="#">Замовити сертифікат</a><a class="btn" href="#">Отримати
           консультацію менеджера</a>
+      </div>
+    </section>
+    <section class="faq">
+      <h2 class="section-title">Питання i вiдповiдi</h2>
+      <div class="accordion">
+        <div class="accordion__item">
+          <div class="accordion__header">Найпопулярніші питання</div>
+          <div class="accordion__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita corporis
+            incidunt, enim maxime officiis ratione, ipsam saepe animi optio ex iusto sunt totam ad assumenda minus
+            cumque consequatur deleniti voluptatum.</div>
+        </div>
+        <div class="accordion__item">
+          <div class="accordion__header">Найпопулярніші питання</div>
+          <div class="accordion__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita corporis
+            incidunt, enim maxime officiis ratione, ipsam saepe animi optio ex iusto sunt totam ad assumenda minus
+            cumque consequatur deleniti voluptatum.</div>
+        </div>
+        <div class="accordion__item">
+          <div class="accordion__header">Найпопулярніші питання</div>
+          <div class="accordion__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita corporis
+            incidunt, enim maxime officiis ratione, ipsam saepe animi optio ex iusto sunt totam ad assumenda minus
+            cumque consequatur deleniti voluptatum.</div>
+        </div>
+        <div class="accordion__item">
+          <div class="accordion__header">Найпопулярніші питання</div>
+          <div class="accordion__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita corporis
+            incidunt, enim maxime officiis ratione, ipsam saepe animi optio ex iusto sunt totam ad assumenda minus
+            cumque consequatur deleniti voluptatum.</div>
+        </div>
+        <div class="accordion__item">
+          <div class="accordion__header">Найпопулярніші питання</div>
+          <div class="accordion__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita corporis
+            incidunt, enim maxime officiis ratione, ipsam saepe animi optio ex iusto sunt totam ad assumenda minus
+            cumque consequatur deleniti voluptatum.</div>
+        </div>
       </div>
     </section>
   </div>
