--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/main.css">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <title>N-Code</title>
 </head>
 
@@ -608,7 +611,7 @@
             incidunt, enim maxime officiis ratione, ipsam saepe animi optio ex iusto sunt totam ad assumenda minus
             cumque consequatur deleniti voluptatum.</div>
         </div>
-      </div>
+      </div><a class="btn" href="#">Отримати консультацію менеджера</a>
     </section>
   </div>
   <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
