--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
     </section>
     <section class="callback-form">
       <div class="section-title">Зворотнiй зв’язок</div>
-      <form class="form" action="POST">
+      <form class="form" action="POST" id="callbackForm">
         <label class="required" for="name">
           <input type="text" name="name" placeholder="Ім’я" required>
         </label>
@@ -638,13 +638,130 @@
           <option value="css">отсюда</option>
           <option value="js">из ниоткуда</option>
         </select>
-        <textarea name="comment" resize="none" placeholder="Повідомлення"></textarea>
+        <textarea name="comment" placeholder="Повідомлення"></textarea>
         <div class="from__btn">
           <button class="btn" type="submit">Надіслати</button>
         </div>
       </form>
     </section>
   </div>
+  <footer class="footer">
+    <div class="content-container">
+      <div class="row">
+        <div class="col">
+          <p class="footer__title">Хочете, щоб з вами зв’язались?</p><a class="btn_blue footer__btn btn"
+            href="#">залишити заявку</a>
+          <div class="btn-wrap"><a class="btn_blue footer__btn btn" href="#">Стати МЕНТОРОМ</a><a
+              class="btn_blue footer__btn btn" href="#">ЗАЛИШИТИ ВІДГУК</a>
+          </div>
+          <div class="footer__sup-pay">
+            <p>Підтримка платежів</p>
+            <div class="pay-ico">
+              <img src="img/mastercard-ico.svg" alt="">
+            </div>
+            <div class="pay-ico">
+              <img src="img/visa-ico.svg" alt="">
+            </div>
+          </div>
+          <div class="footer__copyright">
+            <p>&#169; Компанія N-CODE 2023</p>
+          </div>
+        </div>
+        <div class="col">
+          <p class="footer__title">Школа
+            <ul class="footer__list">
+              <li><a href="">Про нас</a>
+              </li>
+              <li><a href="">Викладачі</a>
+              </li>
+              <li><a href="">Відгуки</a>
+              </li>
+              <li><a href="">Питання і відповіді</a>
+              </li>
+              <li><a href="">Контакти</a>
+              </li>
+            </ul>
+          </p>
+        </div>
+        <div class="col">
+          <p class="footer__title">Соціальні мережі</p>
+          <div class="footer__social">
+            <a class="social-ico" href="">
+              <img src="img/fb-ico.svg" alt="">
+            </a>
+            <a class="social-ico" href="">
+              <img src="img/Instagram-ico.svg" alt="">
+            </a>
+            <a class="social-ico" href="">
+              <img src="img/YouTube-ico.svg" alt="">
+            </a>
+            <a class="social-ico" href="">
+              <img src="img/tg-ico.svg" alt="">
+            </a>
+            <a class="social-ico" href="">
+              <img src="img/li-ico.svg" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="btn-wrap"><a class="btn_blue footer__btn btn" href="#">Стати МЕНТОРОМ</a><a
+              class="btn_blue footer__btn btn" href="#">ЗАЛИШИТИ ВІДГУК</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <footer class="footer__mob">
+    <div class="content-container">
+      <div class="footer__mob-top">
+        <p class="footer__title">Школа
+          <ul class="footer__list">
+            <li><a href="">Про нас</a>
+            </li>
+            <li><a href="">Викладачі</a>
+            </li>
+            <li><a href="">Відгуки</a>
+            </li>
+            <li><a href="">Питання і відповіді</a>
+            </li>
+            <li><a href="">Контакти</a>
+            </li>
+          </ul>
+        </p>
+      </div>
+      <div class="footer__mob-bottom">
+        <div class="footer__sup-pay">
+          <p>Підтримка платежів</p>
+          <div class="pay-ico">
+            <img src="img/mastercard-ico.svg" alt="">
+          </div>
+          <div class="pay-ico">
+            <img src="img/visa-ico.svg" alt="">
+          </div>
+        </div>
+        <div class="footer__social">
+          <a class="social-ico" href="">
+            <img src="img/fb-ico.svg" alt="">
+          </a>
+          <a class="social-ico" href="">
+            <img src="img/Instagram-ico.svg" alt="">
+          </a>
+          <a class="social-ico" href="">
+            <img src="img/YouTube-ico.svg" alt="">
+          </a>
+          <a class="social-ico" href="">
+            <img src="img/tg-ico.svg" alt="">
+          </a>
+          <a class="social-ico" href="">
+            <img src="img/li-ico.svg" alt="">
+          </a>
+        </div>
+        <div class="footer__copyright">
+          <p>&#169; Компанія N-CODE 2023</p>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"
     integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
