footer without form; some fix laptop

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <p>Найкращих студентів працевлаштовуємо</p>
         </div>
         <div class="advantages__item"><span class="item__num">08</span>
-          <p>Сертифікатрекомендації в залежності від отриманих компетенцій</p>
+          <p>Сертифікат\рекомендації в залежності від отриманих компетенцій</p>
         </div>
       </div>
     </section>
@@ -613,36 +613,6 @@
             cumque consequatur deleniti voluptatum.</div>
         </div>
       </div><a class="btn" href="#">Отримати консультацію менеджера</a>
-    </section>
-    <section class="callback-form">
-      <div class="section-title">Зворотнiй зв’язок</div>
-      <form class="form" action="POST" id="callbackForm">
-        <label class="required" for="name">
-          <input type="text" name="name" placeholder="Ім’я" required>
-        </label>
-        <label class="required" for="phone">
-          <input type="phone" name="phone" placeholder="Номер телефона" required>
-        </label>
-        <label class="required" for="email">
-          <input type="email" name="email" placeholder="E-mail" required>
-        </label>
-        <select name="course" id="course">
-          <option></option>
-          <option value="html">HTML</option>
-          <option value="css">CSS</option>
-          <option value="js">JS</option>
-        </select>
-        <select name="wherefrom" id="wherefrom">
-          <option></option>
-          <option value="html">оттуда</option>
-          <option value="css">отсюда</option>
-          <option value="js">из ниоткуда</option>
-        </select>
-        <textarea name="comment" placeholder="Повідомлення"></textarea>
-        <div class="from__btn">
-          <button class="btn" type="submit">Надіслати</button>
-        </div>
-      </form>
     </section>
   </div>
   <footer class="footer">
